--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,14 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "@shopify/react-native-skia": "^2.0.5",
     "@tanstack/react-query": "^5.81.2",
     "axios": "^1.10.0",
     "expo": "~53.0.12",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
