--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,3 @@
-API_URL=3333
-API_DOMAIN=localhost
-API_PROTOCOL=http
+EXPO_PUBLIC_API_URL=3333
+EXPO_PUBLIC_API_DOMAIN=localhost
+EXPO_PUBLIC_API_PROTOCOL=http
