--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,15 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
-    "@shopify/react-native-skia": "^2.0.5",
+    "@shopify/react-native-skia": "v2.0.0-next.4",
     "@tanstack/react-query": "^5.81.2",
     "axios": "^1.10.0",
+    "dateformat": "^5.0.3",
     "expo": "~53.0.12",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.8",
