--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,14 @@
     "axios": "^1.10.0",
     "dateformat": "^5.0.3",
     "expo": "~53.0.12",
+    "expo-av": "~15.1.6",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
@@ -48,9 +50,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-av": "~15.1.6"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
