fix(instagram): limit api call and use package not deprecated

--- a/client/app.json
+++ b/client/app.json
@@ -41,7 +41,12 @@
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
           "cameraPermissionPhoto": "Allow $(PRODUCT_NAME) to access your photos"
         }
-      ]
+      ],
+      "expo-video",
+      {
+        "supportsBackgroundPlayback": true,
+        "supportsPictureInPicture": true
+      }
     ],
     "experiments": {
       "typedRoutes": true
