--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,8 @@
     "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-video": "~2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
