--- a/client/app.json
+++ b/client/app.json
@@ -35,18 +35,14 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
-        },
-        "expo-camera",
-        {
-          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
-          "cameraPermissionPhoto": "Allow $(PRODUCT_NAME) to access your photos"
         }
       ],
       "expo-video",
       {
         "supportsBackgroundPlayback": true,
         "supportsPictureInPicture": true
-      }
+      },
+      "expo-barcode-scanner"
     ],
     "experiments": {
       "typedRoutes": true
