--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "dateformat": "^5.0.3",
     "expo": "~53.0.12",
     "expo-av": "~15.1.6",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
@@ -38,6 +39,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
+    "expo-video": "~2.2.2",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -50,8 +52,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-video": "~2.2.2"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
