--- a/server/package.json
+++ b/server/package.json
@@ -58,6 +58,7 @@
     "@vinejs/vine": "^3.0.1",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
+    "lru-cache": "^11.1.0",
     "luxon": "^3.6.1",
     "pg": "^8.16.2",
     "reflect-metadata": "^0.2.2"
